<resources>
    <string name="app_name">Pressta</string>
    <string name="hint_coffee_weight">Coffee (g)</string>
    <string name="hint_water_in_grams">Water (g)</string>
    <string name="start_timer">Start timer</string>
    <string name="timer_countdown">%1$d:%2$02d</string>
    <string name="hours">%1$d</string>
    <string name="hours_label">h</string>
    <string name="minutes">%1$d</string>
    <string name="minutes_label">m</string>
    <string name="seconds">%1$02d</string>
    <string name="seconds_label">s</string>
    <string name="text_view_label_coffee">COFFEE (g)</string>
    <string name="text_view_label_water">WATER (g)</string>
    <string name="ratio_label">RATIO</string>
    <string name="ratio">%1$d:1</string>
    <string name="reset_timer">BREW</string>
    <string name="quick_brew_hot_label">HOT</string>
    <string name="quick_brew_cold_label">COLD</string>
    <string name="recent_brews_label">RECENT BREWS</string>
    <string name="my_brews_label">MY BREWS</string>
    <string name="quick_brew_label">QUICK BREW</string>
    <string name="brew_time">BREW TIME</string>
    <string name="save_label">Save</string>
    <string name="edit_label">Edit</string>
    <string name="coffee_g">coffee (g)</string>
    <string name="water_g">water (g)</string>
    <string name="ratio_label_lowercase">ratio</string>
    <string name="toast_brew_saved">Brew succesfully saved!</string>
    <string name="new_label">New</string>
    <string name="cold_label">COLD</string>
    <string name="hot_label">HOT</string>
</resources>
