<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:layout_margin="3dp"
    android:background="@color/opaque_black">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lin_layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/con_layout_duration">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/img_btn_star_border"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            tools:text="Brew Title"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/img_btn_star_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_border_black_24dp"
            app:layout_constraintLeft_toRightOf="@id/text_view_title"
            app:layout_constraintRight_toLeftOf="@id/img_btn_star"
            android:tint="@android:color/white"/>

        <ImageView
            android:id="@+id/img_btn_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintLeft_toRightOf="@id/img_btn_star_border"
            app:layout_constraintRight_toRightOf="parent"
            android:tint="#FFD700"
            android:visibility="gone"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/con_layout_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lin_layout_header"
        app:layout_constraintBottom_toTopOf="@id/con_layout_weights">

        <LinearLayout
            android:id="@+id/lin_layout_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lin_layout_minutes"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_view_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                tools:text="12"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/hours_label"
                tools:text="h"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/lin_layout_hours"
            app:layout_constraintRight_toLeftOf="@id/lin_layout_seconds">

            <TextView
                android:id="@+id/text_view_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/minutes_label"
                tools:text="m"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/lin_layout_minutes"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/text_view_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="30"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/seconds_label"
                tools:text="s"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/con_layout_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/con_layout_duration"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/lin_layout_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lin_layout_coffee_weight">

            <TextView
                android:id="@+id/text_view_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratio"
                tools:text="16:1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_view_ratio_label"/>

            <TextView
                android:id="@+id/text_view_ratio_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/ratio_label_lowercase"
                tools:text="ratio"
                app:layout_constraintLeft_toRightOf="@id/text_view_ratio"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_coffee_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/lin_layout_ratio"
            app:layout_constraintRight_toLeftOf="@id/lin_layout_water_weight">

            <TextView
                android:id="@+id/text_view_coffee_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="20"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_coffee_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/coffee_g"
                tools:text="coffee (g)"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_layout_water_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/lin_layout_coffee_weight"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/text_view_water_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="320"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_water_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/water_g"
                tools:text="water (g)"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>