<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/pressta_no_background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:orientation="vertical">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2"
            app:rowCount="2">

            <RelativeLayout
                android:id="@+id/rel_layout_quick_brew"
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginBottom="2dp"
                android:background="@color/light_blue"
                app:layout_columnWeight="50"
                app:layout_rowWeight="50"
                app:layout_row="0"
                app:layout_column="0"
                app:layout_columnSpan="2"
                android:paddingTop="10dp"
                android:paddingBottom="3dp">

                <LinearLayout
                    android:id="@+id/lin_layout_quick_brew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_view_quick_brew"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_flash_on_black_24dp"
                        android:tint="@color/teal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quick_brew_label"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_view_quick_hot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/quick_brew_hot_label"/>

                    <TextView
                        android:id="@+id/text_view_quick_cold"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="50"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/quick_brew_cold_label"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/light_blue"
                app:layout_columnWeight="50"
                app:layout_rowWeight="50"
>

                <ImageView
                    android:id="@+id/img_view_my_brews"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_person_black_24dp"
                    android:tint="@color/teal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_view_my_brews"
                    android:layout_centerHorizontal="true"
                    android:text="@string/my_brews_label"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/light_blue"
                app:layout_columnWeight="50"
                app:layout_rowWeight="50"
                app:layout_row="1"
                app:layout_column="1">

                <ImageView
                    android:id="@+id/img_view_recent_brews"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_list_black_24dp"
                    android:tint="@color/teal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_view_recent_brews"
                    android:layout_centerHorizontal="true"
                    android:text="@string/recent_brews_label"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RelativeLayout>


        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</LinearLayout>