<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wet_asphalt"
                xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/layout_progress_bar"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true">

        <ProgressBar
            android:id="@+id/progress_bar_brew_countdown"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="false"
            android:background="@drawable/circular_progress_bar_black"
            android:progressDrawable="@drawable/circular_progress_bar_concrete"/>

        <TextView
            android:id="@+id/text_view_time_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            tools:text="4:30"
            android:textSize="70sp"
            android:textColor="@color/dull_yellow"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout_weights"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">
        <EditText
            android:id="@+id/edit_text_coffee_weight"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="30sp"
            android:background="@color/transparent"
            android:cursorVisible="false"/>
        <EditText
            android:id="@+id/edit_text_water_weight"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:textSize="30sp"
            android:background="@color/transparent"
            android:cursorVisible="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_weight_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/linear_layout_weights"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_view_label_coffee"
            android:labelFor="@id/edit_text_coffee_weight"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_view_label_water"
            android:labelFor="@id/edit_text_water_weight"
            android:textSize="15sp"/>
    </LinearLayout>
    <SeekBar
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_ratio"
        android:max="19"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/linear_layout_weight_labels"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/text_view_seekbar_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="16"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_above="@id/seekbar_ratio"
        android:minEms="2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_view_seekbar_label"
        android:layout_centerHorizontal="true"
        android:text="@string/ratio_label"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>